# chatbot-automated-data-engineering-pipeline

./: .gitignore  README-local.md  README-production.md  README.md  main.py  pyproject.toml  requirements.txt
config/: config_connected.yaml  config_local.yaml  config_prod.yaml  config_simulate.yaml  prompts.yaml
sample_data/: work_items.json
src/agentic_de_pipeline/: __init__.py  config.py  logging_utils.py  models.py  state_store.py
src/agentic_de_pipeline/adapters/: azure_devops.py  azure_pipelines.py  azure_repos.py  databricks.py
src/agentic_de_pipeline/agents/: implementation_agent.py  promotion_agent.py  qa_agent.py  remediation_agent.py  requirement_agent.py
src/agentic_de_pipeline/approvals/: human_loop.py
src/agentic_de_pipeline/services/: chat_api.py  developer_workflow.py  mcp_router.py  preflight.py  prompt_engine.py
src/agentic_de_pipeline/transformers/: __init__.py  base.py  databricks_notebook.py  python_etl.py  registry.py  sql.py
src/agentic_de_pipeline/utils/: network.py  retry.py  secrets.py  timing.py
src/agentic_de_pipeline/workflow/: bootstrap.py  (+1 more)
state/: approvals_state.json  idempotency_state.json
tests/: conftest.py
tests/integration/: test_local_end_to_end.py
tests/regression/: test_memory_learning.py
tests/unit/: test_clarification_and_devops_comment.py  test_config_runtime_profile.py  test_devops_priority.py  test_idempotency.py  test_orchestrator_gates.py  test_preflight.py  test_remediation_loop.py  test_repo_provisioning.py  test_requirement_agent.py  test_security_private_mode.py  test_transformer_plugins.py
(+3 files in other folders)
